--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -10,18 +10,20 @@ $secondary: 'Mercury SSm A', 'Mercury SSm B';
 
 $accent: #3F6D75;
 $space: 1.5em;
-$light: #FCFCFC;
-$gray: #818c94;
+$light: #A2BDC1;
+$gray: #75898C;
 $dark-gray: #404040;
 $light-gray: #d7ddde;
+$dark: #243D42;
+$background: #FAFAFA;
 
-html {
-
+html, body {
+	height: 100%;
 }
 
 body {
 	border-top: 0.422em solid $accent;
-	background: $light;
+	background: $background;
 	color: $dark-gray;
 	font-weight: 400;
 	font-style: normal;
@@ -29,6 +31,19 @@ body {
 	font-family: $primary;
 	line-height: 1.5em;
 	-webkit-font-smoothing: antialiased;
+}
+
+#wrapper {
+  min-height: 100%;
+  margin-bottom: -8em;
+  &:after {
+  	content: "";
+  	display: block;
+  }
+}
+
+footer, #wrapper:after {
+	height: 8em;
 }
 
 h1 {
@@ -117,8 +132,10 @@ article {
 }
 
 footer {
+	padding: 1em 0;
 	font-family: $secondary;
 	color: $gray;
+	background: $dark;
 	span.canada {
 		font-size: 1.333em;
 		display: inline-block;
@@ -127,6 +144,7 @@ footer {
 		background: url("assets/canadian-flag.svg");
 		background-size: 2em, 1em;
 		background-repeat: no-repeat;
+		display: none;
 	}
 }
 
