--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -33,6 +33,8 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
+* { margin: 0}
+
 #wrapper {
   min-height: 100%;
   margin-bottom: -8em;
@@ -40,6 +42,10 @@ body {
   	content: "";
   	display: block;
   }
+}
+
+header {
+	display: none;
 }
 
 footer, #wrapper:after {
@@ -123,7 +129,7 @@ span.meta {
 }
 
 section {
-	margin: 2em;
+	padding: 2em 0 0 0;
 	@include outer-container;
 }
 
@@ -132,7 +138,7 @@ article {
 }
 
 footer {
-	padding: 1em 0;
+	padding: 0;
 	font-family: $secondary;
 	color: $gray;
 	background: $dark;
@@ -144,7 +150,16 @@ footer {
 		background: url("assets/canadian-flag.svg");
 		background-size: 2em, 1em;
 		background-repeat: no-repeat;
-		display: none;
 	}
 }
 
+#blur {
+	height: 100%;
+	-webkit-filter: blur(6px) contrast(0.4) brightness(1.4);
+	-moz-filter: blur(6px) contrast(0.4) brightness(1.4);
+	-o-filter: blur(6px) contrast(0.4) brightness(1.4);
+	-ms-filter: blur(6px) contrast(0.4) brightness(1.4);
+	transition: all 0.5s ease-in-out;
+	-webkit-transform: translate3d(0,0,0);
+	clip: rect(inherit);
+}
