--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,4 +1,7 @@
 %footer
-  %section
-    %span.canada
-    / = Time.now.year
+	%section
+		%span.left
+			BY-NC-SA Creative Commons
+		%span.right
+			Made in Canada
+			/ = Time.now.year
