--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -2,8 +2,9 @@
 	%meta(charset="UTF-8")
 	%meta(type="description" content="")
 	%title<
-		bradcerasanime
+		Journal
 		= ": #{@title}" if @title
+	%link(rel='icon' type='image/favicon' href='/favicon.ico')
 	%link(rel="stylesheet" type="text/css" href="//cloud.typography.com/7985652/791662/css/fonts.css")
 	%link(rel="stylesheet" type="text/css" href="/css/styles.css")
 	:javascript
