--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -2,42 +2,68 @@
 @import "bourbon/bourbon";
 @import "grid-settings";
 @import "neat/neat";
-@import "pygments";
 
 $primary: 'Whitney SSm A', 'Whitney SSm B';
 $secondary: 'Mercury SSm A', 'Mercury SSm B';
-// $tertiary: ;
+
+$base: 20px;
+$giga: modular-scale($base, 6, 1.333);
+$alpha: modular-scale($base, 4, 1.333);
+$beta: modular-scale($base, 3, 1.333);
+$gamma: modular-scale($base, 2, 1.333);
+$delta: modular-scale($base, 1, 1.333);
+$epsilon: modular-scale($base, -1, 1.333);
+$milli: modular-scale($base, -3, 1.333);
+$micro: modular-scale($base, -5, 1.333);
 
 $accent: #3F6D75;
 $space: 1.5em;
 $light: #A2BDC1;
 $gray: #75898C;
 $dark-gray: #404040;
-$light-gray: #d7ddde;
+$light-gray: darken(#d7ddde, 10%);
 $dark: #243D42;
 $background: #FAFAFA;
+
+$pad: $delta;
+
+@import "pygments";
+
+::selection {
+	color: $dark;
+	background: rgba($light, 0.8);
+}
+
+::-moz-selection {
+	color: $dark;
+	background: rgba($light, 0.8);
+}
 
 html, body {
 	height: 100%;
 }
 
 body {
-	border-top: 0.422em solid $accent;
+	border-top: $milli solid $accent;
 	background: $background;
 	color: $dark-gray;
 	font-weight: 400;
 	font-style: normal;
 	font-size: 20px;
 	font-family: $primary;
-	line-height: 1.5em;
+	line-height: $gamma;
 	-webkit-font-smoothing: antialiased;
-}
+	@include media($tablet) {
 
-* { margin: 0}
+	}
+	@include media($desktop) {
+		// font-size: 22px;
+	}
+}
 
 #wrapper {
   min-height: 100%;
-  margin-bottom: -8em;
+  margin-bottom: -5em;
   &:after {
   	content: "";
   	display: block;
@@ -45,43 +71,57 @@ body {
 }
 
 header {
-	display: none;
+	padding: $alpha 0;
+	position: relative;
 }
 
 footer, #wrapper:after {
-	height: 8em;
+	height: 5em;
+	line-height: 5em;
 }
 
 h1 {
-	margin: 0;
+	margin: 0 0 0 0;
 	padding: 0;
 	letter-spacing: -0.05em;
-	font-size: 3.157em;
-	font-family: 'Mercury SSm A', 'Mercury SSm B';
+	font-size: $alpha;
+	font-family: $secondary;
 	line-height: 1.25em;
+}
+
+span.meta {
+	color: $light-gray;
+	// font-size: $epsilon;
+	margin: 0;
+	bottom: 0;
+	display: block;
+	position: absolute;
 }
 
 h2 {
 	letter-spacing: -0.05em;
 	font-weight: 700;
-	font-size: 1.333em;
-	line-height: 1em;
+	font-size: $gamma;
+	line-height: 1.5em;
+	margin: 0 0 $pad 0;
 }
 
 h3 {
 	color: $accent;
 	font-weight: 500;
 	line-height: 1em;
+	font-size: $pad;
 }
 
 p {
-	margin: 1.5em 0;
+	margin: 0 0 $pad 0;
 }
 
 blockquote {
-	margin: 1em 0 1em -1em;
-	padding: 0 0 0 1em;
-	border-left: 0.238em solid $accent;
+	display: block;
+	margin: $pad 0 $pad ($pad * -1);
+	box-shadow: inset $micro 0 0 $accent;
+	padding: 0 0 0 $pad;
 	font-weight: 400;
 	font-style: italic;
 	p {
@@ -90,8 +130,18 @@ blockquote {
 }
 
 a {
-	color: inherit;
+	color: $accent;
 	text-decoration: none;
+	font-weight: 500;
+	@include transition-duration(0.2s);
+	&:hover {
+		color: $light;
+	}
+}
+
+em {
+	font-style: italic;
+	font-weight: 500;
 }
 
 nav ul {
@@ -110,7 +160,7 @@ nav ul {
 		}
 		a {
 			h1 {
-				font-size: 2.369em !important;
+				font-size: $gamma !important;
 			}
 			span {
 				display: block;
@@ -123,27 +173,31 @@ nav ul {
 	}
 }
 
-span.meta {
-	color: $gray;
-	font-size: 0.75em;
-}
-
 section {
-	padding: 2em 0 0 0;
+	padding: 0 0 0 0;
 	@include outer-container;
 }
 
 article {
-
+	margin: 0 0 10em 0;
+	padding: 0 0 $pad 0;
+	border-bottom: 1px solid $light-gray;
 }
 
 footer {
 	padding: 0;
-	font-family: $secondary;
-	color: $gray;
+	color: $light-gray;
 	background: $dark;
-	span {
-
+	span.left {
+		font-size: $epsilon;
+		font-weight: 500;
+		@include span-columns(2);
+	}
+	span.right {
+		text-align: right;
+		font-size: $epsilon;
+		font-weight: 500;
+		@include span-columns(2);
 	}
 }
 
