--- a/public/css/sass/_grid-settings.scss
+++ b/public/css/sass/_grid-settings.scss
@@ -7,7 +7,7 @@ $grid-columns: 4;
 $max-width: 720px;
 // $visual-grid: true;
 $pad: 1em;
-$visual-grid-color: red;
+// $visual-grid-color: red;
 
 // Define your breakpoints
 $mobile: new-breakpoint(min-width 320px 4);
