--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer
 	%section
 		%span.left
-			BY-NC-SA Creative Commons
+			©
+			= Time.now.year
 		%span.right
 			Made in Canada
-			/ = Time.now.year
