--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -1,6 +1,8 @@
 %head
 	%meta(charset="UTF-8")
 	%meta(type="description" content="")
+	%meta{name: "viewport", content: "width=device-width; initial-scale=1.0; maximum-scale=1.0;"}
+
 	%title<
 		Journal
 		= ": #{@title}" if @title
