--- a/views/layouts/_header.haml
+++ b/views/layouts/_header.haml
@@ -1,7 +1,3 @@
-%header
-  %hgroup
-    %a(href='/')
-      / %h1 bradcerasani.me
-  %nav
-    %ul<
-      / =nav_item("Journal")
+/ %header
+/ %ul<
+/ =nav_item("Journal")
