added stylesheet back. oops

--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -10,3 +10,4 @@
 	%link(rel='icon' type='image/favicon' href='/favicon.ico')
 	%link(rel="stylesheet" type="text/css" href="//cloud.typography.com/7985652/791662/css/fonts.css")
 	/ %link(rel="stylesheet" type="text/css" href="//cloud.typography.com/7985652/793482/css/fonts.css")
+	%link(rel="stylesheet" type="text/css" href="/css/styles.css")
