--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer
 	%div.container
 		%div.left
-			%span.flag
-		%div.right
-			%a(href="mailto:hello@bradcerasani.me" target="_blank")
+			%a.inherit(href="mailto:hello@bradcerasani.me" target="_blank")
 				hello@bradcerasani.me
+		%div.right
+			%span.flag
