--- a/public/css/sass/_symbolset.scss
+++ b/public/css/sass/_symbolset.scss
@@ -12,11 +12,11 @@
 
 @font-face {
   font-family: "SSSocialCircle";
-  src: url('ss-social-circle.eot');
-  src: url('ss-social-circle.eot?#iefix') format('embedded-opentype'),
-       url('ss-social-circle.woff') format('woff'),
-       url('ss-social-circle.ttf')  format('truetype'),
-       url('ss-social-circle.svg#SSSocialCircle') format('svg');
+  src: url('../fonts/symbolset/ss-social-circle.eot');
+  src: url('../fonts/symbolset/ss-social-circle.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/symbolset/ss-social-circle.woff') format('woff'),
+       url('../fonts/symbolset/ss-social-circle.ttf')  format('truetype'),
+       url('../fonts/symbolset/ss-social-circle.svg#SSSocialCircle') format('svg');
   font-weight: normal;
   font-style: normal;
 }
