--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -2,25 +2,39 @@
 @import "bourbon/bourbon";
 @import "grid-settings";
 @import "neat/neat";
-@import "../symbolset/ss-social-circle";
+@import "icons";
+@import "symbolset";
+
+/* ------------------------------------------------ *\
+
+	# SMACSS
+	1. Base
+	2. Layout
+	3. Module
+	4. State
+	5. Theme
+
+\* ------------------------------------------------ */
+
+// Variables
 
 $whitney: 'Whitney SSm A', 'Whitney SSm B';
 $sentinel: 'Sentinel SSm A', 'Sentinel SSm B';
 
 $base: 20px;
 
-$alpha: modular-scale($base, 4, 1.333);
-$gamma: modular-scale($base, 2, 1.333);
-$delta: modular-scale($base, 1, 1.333);
-$default: modular-scale($base, 0, 1.333);
-$epsilon: modular-scale($base, -1, 1.333);
+$alpha: 2.369rem;
+$gamma: 1.777rem;
+$delta: 1.333rem;
+$default: 1rem;
+$epsilon: 0.75rem;
 
 $dark-gray: #202020;
 $gray: #404040;
 $light-gray: #535353;
-$lighter-gray: #DFDFDF;
-$accent: #3BA7BB;
+$lighter-gray: lighten(#DFDFDF, 5%);
 $light: #fafafa;
+$accent: #3BA7BB;
 
 $twitter: #00aced;
 $linkedin: #007bb6;
@@ -28,139 +42,71 @@ $instagram: #517fa4;
 $dribbble: #ea4c89;
 $rdio: #008FD5 ;
 $github: #171515;
-$gmail: #DD4B39;
-
-$pad: $gamma;
 
 @import "pygments";
 
-::selection {
-	background: rgba($accent, 0.8);
-	color: $light;
-}
+// Mixins
 
-::-moz-selection {
-	background: rgba($accent, 0.8);
-	color: $light;
-}
-
-body {
-	background: $light;
-	color: $gray;
-	font-size: $base;
-	font-family: $whitney;
-	line-height: 2;
-	-webkit-font-smoothing: subpixel-antialiased;
-}
-
-$icon-size: $delta;
+$icon-size: 28px;
 $icon-pad: 20px;
 $overlap: 2px;
 
-@mixin social-circle($icon, $color, $background) {
-	@include transition(all 0.18s ease);
+@mixin social-circle($icon, $color) {
+	@include transition(all 0.2s ease);
 	position: relative;
 	display: block;
+	margin: 0 auto;
 	width: $icon-size + $icon-pad;
 	height: $icon-size + $icon-pad;
 	border-radius: 50%;
 	background: $color;
-	box-shadow: inset 0 0 0 1px $color,
-							inset 0 0 0 ($icon-pad/2 + $overlap) $background;
+	box-shadow: 0 0 0 2px $color,
+							inset 0 0 0 ($icon-pad/2 + $overlap) $dark-gray;
 	&:before {
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		margin: (-$icon-size/2) 0 0 (-$icon-size/2);
-		color: $background;
+		color: $dark-gray;
 		content: $icon;
 		font-size: $icon-size;
 		font-family: "SSSocialCircle";
 		line-height: 1.25;
 	}
 	&:hover {
-		background: lighten($color, 10%);
-		box-shadow: inset 0 0 0 1px lighten($color, 10%),
-								inset 0 0 0 ($icon-pad/2 + $overlap) $background;
+		background: adjust-color($color, $lightness: 10%, $saturation: 50%);
+		box-shadow: 0 0 0 2px adjust-color($color, $lightness: 10%, $saturation: 50%),
+								inset 0 0 0 ($icon-pad/2 + $overlap) $dark-gray;
 	}
 }
 
-ul.social {
-	display: block;
-	overflow: auto;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	li {
-		@include span-columns(1 of 12);
-		.twitter {
-			@include social-circle("", $twitter, $dark-gray)
-		}
-		.instagram {
-			@include social-circle("", $instagram, $dark-gray)
-		}
-		.github {
-			@include social-circle("", $light, $dark-gray)
-		}
-		.dribbble {
-			@include social-circle("", $dribbble, $dark-gray)
-		}
-		.linkedin {
-			@include social-circle("", $linkedin, $dark-gray)
-		}
-		.rdio {
-			@include social-circle("", $rdio, $dark-gray)
-		}
+@mixin ext-link($color) {
+	&:hover {
+		color: $color;
+	}
+	&:before {
+		color: $color;
 	}
 }
 
-img {
-	max-width: 100%;
+// Base Styles
+
+html {
+	font-size: $base;
 }
 
-.title {
-	position: relative;
-	display: block;
-	padding: 1rem 0;
-	color: $light;
-	text-transform: uppercase;
-	letter-spacing: 0.2em;
-	font-size: $default;
-	line-height: 1;
-}
-
-hr {
-	margin: 0 auto;
-	height: 1px;
-	border: none;
-	background: $light-gray;
-}
-
-header {
-	padding: 0 0;
-	position: relative;
-	font-size: $default;
-	overflow: auto;
-}
-
-.hero {
-	margin: 0 0 0 0;
-	padding: 2rem 0;
-	letter-spacing: -0.03em;
-	font-weight: 300;
-	font-size: $gamma;
-	font-family: $sentinel;
-	p {
-		line-height: 1.5;
-		margin: 0;
-		padding: 0;
-	}
+body {
+	background: $light;
+	color: $gray;
+	font-family: $whitney;
+	line-height: 1.5;
+	-webkit-font-smoothing: subpixel-antialiased;
 }
 
 h1 {
 	margin: 0 0 1rem 0;
 	padding: 0;
-	letter-spacing: -0.06em;
+	letter-spacing: -0.08rem;
 	font-weight: 700;
 	font-size: $alpha;
 	line-height: 1.25;
@@ -169,7 +115,7 @@ h1 {
 h2 {
 	margin: 0 0 0 0;
 	padding: 1rem 0 0 0;
-	letter-spacing: -0.05em;
+	letter-spacing: -0.05rem;
 	font-weight: 700;
 	font-size: $gamma;
 	line-height: 1.5;
@@ -179,7 +125,7 @@ h3 {
 	color: $accent;
 	font-weight: 500;
 	font-size: $default;
-	line-height: 1em;
+	line-height: 1rem;
 }
 
 h4 {
@@ -196,21 +142,18 @@ p {
 	margin: 0 0 1.5rem 0;
 	padding: 0;
 	line-height: 1.8;
-	&.small {
-		margin: 2rem 0 0 0;
-		color: $lighter-gray;
-		letter-spacing: 0;
-		font-size: $delta;
-		font-family: $whitney;
-		line-height: 1.5;
-	}
+}
+
+em {
+	font-weight: 500;
+	font-style: italic;
 }
 
 blockquote {
 	display: block;
-	margin: $pad 0 $pad ($pad * -1);
+	margin: 1rem 0 1rem -1rem;
+	padding: 0 0 0 1rem;
 	box-shadow: inset 1px 0 0 $accent;
-	padding: 0 0 0 $pad;
 	font-weight: 400;
 	font-style: italic;
 	p {
@@ -219,111 +162,241 @@ blockquote {
 }
 
 a {
+	@include transition-duration(0.2s);
 	color: $accent;
 	text-decoration: none;
-	@include transition-duration(0.2s);
 	&:hover {
 		color: lighten($accent, 10%);
 	}
 }
 
-em {
-	font-style: italic;
-	font-weight: 500;
+img {
+	max-width: 100%;
 }
 
-ul.posts {
+hr {
+	margin: 0 auto;
+	height: 1px;
+	border: none;
+	background: $light-gray;
+}
+
+header {
+	position: relative;
+	padding: 3rem 0 4rem 0;
+}
+
+section {
+	padding: 4rem 0 0 0;
+}
+
+article {
+	margin: 4rem 0 0 0;
+	padding: 0 0 2rem 0;
+	border-bottom: 1px solid $lighter-gray;
+}
+
+footer {
+	padding: 4rem 0 4rem 0;
+	font-size: $epsilon;
+	line-height: 1.1;
+}
+
+/* ------------------------ *\
+	Layout
+\* ------------------------ */
+
+.container {
+	@include outer-container;
+}
+
+.left {
+	@include span-columns(6 of 12);
+}
+.right {
+	@include span-columns(6 of 12);
+}
+
+/* ------------------------ *\
+	Module
+\* ------------------------ */
+
+.dark {
+	background: $dark-gray;
+	color: $light;
+}
+
+.title {
+	padding: 1rem 0;
+	border-top: 1px solid $light-gray;
+	border-bottom: 1px solid $light-gray;
+	color: $light;
+	text-transform: uppercase;
+	letter-spacing: 0.2rem;
+	line-height: 1;
+}
+
+.hero {
+	margin: 0 0 0 0;
+	padding: 2rem 0;
+	p {
+		margin: 0 0 1rem 0;
+		letter-spacing: -0.05rem;
+		font-weight: 300;
+		font-size: $gamma;
+		font-family: $sentinel;
+		line-height: 1.45;
+		// background: rgba(orange, 0.5);
+		&:last-of-type {
+			margin: 0;
+			color: $lighter-gray;
+			letter-spacing: 0;
+			font-size: $delta;
+			font-family: $whitney;
+		}
+	}
+}
+
+ul.social {
 	display: block;
-	margin: 1rem 0 0 0;
+	overflow: auto;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	li {
+		@include span-columns(1 of 12);
+		padding: 2px;
+		.twitter {
+			@include social-circle("", $twitter);
+		}
+		.instagram {
+			@include social-circle("", $instagram);
+		}
+		.github {
+			@include social-circle("", $light);
+		}
+		.dribbble {
+			@include social-circle("", $dribbble);
+		}
+		.linkedin {
+			@include social-circle("", $linkedin);
+		}
+		.rdio {
+			@include social-circle("", $rdio);
+		}
+	}
+}
+
+ul.articles {
+	display: block;
+	margin: 1rem 0 4rem 0;
 	padding: 0;
 	li {
-		display: block;
-		margin: 0;
-		padding: 2em 0;
-		list-style: none;
-		overflow: auto;
-		border-bottom: 1px solid $lighter-gray;
 		@include transition(all 0.2s ease);
+		display: block;
+		overflow: auto;
+		margin: 0;
+		padding: 2rem 0;
+		border-bottom: 1px solid $lighter-gray;
+		list-style: none;
 		&:first-of-type {
 			border-top: 1px solid $lighter-gray;
 		}
 		.date {
-			@include span-columns(2 of 12);
-			font-size: $epsilon;
+			@include span-columns(3 of 12);
 			color: $light-gray;
-			// background: rgba(pink, 0.5);
+			font-size: $epsilon;
 		}
 		a {
-			@include span-columns(10 of 12);
+			@include span-columns(9 of 12);
 			@include omega;
-			line-height: 1.25;
-			font-size: $gamma !important;
-			font-weight: bold;
-			letter-spacing: -0.05em;
-			font-weight: 700;
 			color: $light-gray;
-			// background: rgba(orange, 0.5);
+			letter-spacing: -0.1rem;
+			font-weight: bold;
+			font-weight: 600;
+			font-size: $gamma !important;
+			line-height: 1;
 			&:hover {
 				color: $accent;
 			}
 		}
-		span.excerpt {
-			@include span-columns(10 of 12);
-			@include shift(2);
+		.excerpt {
+			@include span-columns(9 of 12);
+			@include shift(3);
 			color: $light-gray;
 			font-family: $whitney;
-			// background: rgba(yellow, 0.5);
+			line-height: 2;
 		}
 	}
 }
 
-section {
-	padding: 6rem 0 0 0;
-}
-
-.container {
-	overflow: auto;
-	@include outer-container;
-}
-
-article {
-	margin: 4rem 0 4rem 0;
-}
-
-.dark {
-	padding: 4rem 0 6rem 0;
-	background: $dark-gray;
-	color: $light;
-	&.small {
-		padding: 0 0;
-	}
-}
-
-footer {
-	padding: 2em 0 6em 0;
-	line-height: 1.1;
-	.left {
-		@include span-columns(6 of 12);
-		font-size: $epsilon;
-	}
-	.right {
-		@include span-columns(6 of 12);
-		font-size: $epsilon;
-		text-align: right;
+ul.elsewhere {
+	@extend .articles;
+	margin-bottom: 0;
+	li {
 		a {
-			color: $light-gray;
-			text-decoration: underline;
-			&:hover {
-				color: $accent;
+			letter-spacing: -0.04rem;
+			font-weight: 400;
+			font-size: $delta !important;
+			&:before {
+				position: absolute;
+				margin-left: -1.5rem;
+				color: $light-gray;
+				content: "\e000";
+				font-size: $default;
+				font-family: icomoon;
+				line-height: 1.25;
 			}
+			&.hm {
+				@include ext-link(#FF3301);
+			}
+			&.onone {
+				@include ext-link(#0069AA);
+			}
+		}
+		.excerpt {
+			letter-spacing: 0.01rem;
+			font-style: italic;
+			font-size: $epsilon;
 		}
 	}
 }
 
 .flag {
+	display: block;
+	float: right;
+	width: 1.6rem;
+	height: 0.8rem;
 	background: url(../images/canadian-flag.svg) no-repeat;
 	background-size: contain;
-	width: 2rem;
-	height: 1rem;
-	display: block;
+}
+
+/* ------------------------ *\
+	State
+\* ------------------------ */
+
+.hide {
+	display: none;
+}
+
+.cloak {
+	visibility: hidden;
+}
+
+.transparent {
+	opacity: 0;
+}
+
+.inherit {
+	color: inherit;
+}
+
+::selection {
+	background: rgba($accent, 0.8);
+	color: $light;
+}
+
+::-moz-selection {
+	background: rgba($accent, 0.8);
+	color: $light;
 }
