--- a/public/css/sass/_grid-settings.scss
+++ b/public/css/sass/_grid-settings.scss
@@ -2,13 +2,12 @@
 
 // Change the grid settings
 $gutter: 1em;
-$grid-columns: 4;
-$max-width: 800px;
-// $visual-grid: true;
+$grid-columns: 6;
+$max-width: 820px;
+$visual-grid: true;
 $visual-grid-color: orange;
 
 // Define your breakpoints
-$mobile: new-breakpoint(min-width 320px 4);
+$mobile: new-breakpoint(min-width 320px 6);
 $tablet: new-breakpoint(min-width 569px 8);
 $desktop: new-breakpoint(min-width 1025px 12);
-$widescreen: new-breakpoint(min-width 1400px 12);
