--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -21,8 +21,6 @@
 $whitney: 'Whitney SSm A', 'Whitney SSm B';
 $sentinel: 'Sentinel SSm A', 'Sentinel SSm B';
 
-$base: 20px;
-
 $alpha: 2.369rem;
 $gamma: 1.777rem;
 $delta: 1.333rem;
@@ -47,15 +45,14 @@ $github: #171515;
 
 // Mixins
 
-$icon-size: 28px;
-$icon-pad: 20px;
-$overlap: 2px;
+$icon-size: 1.4rem;
+$icon-pad: 1rem;
+$overlap: 0.13rem;
 
 @mixin social-circle($icon, $color) {
 	@include transition(all 0.2s ease);
 	position: relative;
 	display: block;
-	margin: 0 auto;
 	width: $icon-size + $icon-pad;
 	height: $icon-size + $icon-pad;
 	border-radius: 50%;
@@ -78,13 +75,16 @@ $overlap: 2px;
 		box-shadow: 0 0 0 2px adjust-color($color, $lightness: 10%, $saturation: 50%),
 								inset 0 0 0 ($icon-pad/2 + $overlap) $dark-gray;
 	}
+	@include breakpoint($desktop) {
+		margin: 0 auto;
+	}
 }
 
 @mixin ext-link($color) {
-	&:hover {
+	&:before {
 		color: $color;
 	}
-	&:before {
+	&:hover {
 		color: $color;
 	}
 }
@@ -92,7 +92,10 @@ $overlap: 2px;
 // Base Styles
 
 html {
-	font-size: $base;
+	font-size: 16px;
+	@include media($tablet) {
+		font-size: 20px;
+	}
 }
 
 body {
@@ -183,11 +186,17 @@ hr {
 
 header {
 	position: relative;
-	padding: 3rem 0 4rem 0;
+	padding: 1rem 0 2rem 0;
+	@include media($tablet) {
+		padding: 3rem 0 4rem 0;
+	}
 }
 
 section {
-	padding: 4rem 0 0 0;
+	padding: 2rem 0 0 0;
+	@include media($tablet) {
+		padding: 4rem 0 0 0;
+	}
 }
 
 article {
@@ -197,9 +206,12 @@ article {
 }
 
 footer {
-	padding: 4rem 0 4rem 0;
+	padding: 2rem 0;
 	font-size: $epsilon;
 	line-height: 1.1;
+	@include media($tablet) {
+		padding: 4rem 0;
+	}
 }
 
 /* ------------------------ *\
@@ -208,13 +220,32 @@ footer {
 
 .container {
 	@include outer-container;
+	padding: 0 1rem;
+	@include media($tablet) {
+		padding: 0 2rem;
+	}
+	@include media($desktop) {
+		padding: 0;
+	}
 }
 
 .left {
-	@include span-columns(6 of 12);
+	@include span-columns(3);
+	@include media($tablet) {
+		@include span-columns(4 of 8);
+	}
+	@include media($desktop) {
+		@include span-columns(6 of 12);
+	}
 }
 .right {
-	@include span-columns(6 of 12);
+	@include span-columns(3);
+	@include media($tablet) {
+		@include span-columns(4 of 8);
+	}
+	@include media($desktop) {
+		@include span-columns(6 of 12);
+	}
 }
 
 /* ------------------------ *\
@@ -238,22 +269,30 @@ footer {
 
 .hero {
 	margin: 0 0 0 0;
-	padding: 2rem 0;
+	padding: 1rem 0;
 	p {
 		margin: 0 0 1rem 0;
 		letter-spacing: -0.05rem;
 		font-weight: 300;
-		font-size: $gamma;
+		font-size: $delta;
 		font-family: $sentinel;
 		line-height: 1.45;
-		// background: rgba(orange, 0.5);
+		@include media($tablet) {
+			font-size: $gamma;
+		}
 		&:last-of-type {
 			margin: 0;
 			color: $lighter-gray;
 			letter-spacing: 0;
-			font-size: $delta;
+			font-size: $default;
 			font-family: $whitney;
+			@include media($tablet) {
+				font-size: $delta;
+			}
 		}
+	}
+	@include media($tablet) {
+		padding: 2rem 0;
 	}
 }
 
@@ -264,8 +303,14 @@ ul.social {
 	padding: 0;
 	list-style: none;
 	li {
-		@include span-columns(1 of 12);
+		@include span-columns(1);
 		padding: 2px;
+		@include media($tablet) {
+			@include span-columns(1 of 8);
+		}
+		@include media($desktop) {
+			@include span-columns(1 of 12);
+		}
 		.twitter {
 			@include social-circle("", $twitter);
 		}
@@ -289,43 +334,59 @@ ul.social {
 
 ul.articles {
 	display: block;
-	margin: 1rem 0 4rem 0;
+	margin: 1rem 0 2rem 0;
 	padding: 0;
+	@include media($tablet) {
+		margin: 1rem 0 4rem 0;
+	}
 	li {
 		@include transition(all 0.2s ease);
+		@include media($desktop) {
+			padding: 2rem 0;
+		}
 		display: block;
 		overflow: auto;
 		margin: 0;
-		padding: 2rem 0;
+		padding: 1rem 0;
 		border-bottom: 1px solid $lighter-gray;
 		list-style: none;
+
 		&:first-of-type {
 			border-top: 1px solid $lighter-gray;
 		}
 		.date {
-			@include span-columns(3 of 12);
+			display: block;
 			color: $light-gray;
 			font-size: $epsilon;
+			@include media($desktop) {
+				@include span-columns(3 of 12);
+			}
 		}
 		a {
-			@include span-columns(9 of 12);
-			@include omega;
+			display: block;
 			color: $light-gray;
 			letter-spacing: -0.1rem;
 			font-weight: bold;
 			font-weight: 600;
-			font-size: $gamma !important;
+			font-size: $gamma;
 			line-height: 1;
+			@include media($desktop) {
+				@include span-columns(9 of 12);
+				@include omega;
+			}
 			&:hover {
 				color: $accent;
 			}
 		}
 		.excerpt {
-			@include span-columns(9 of 12);
-			@include shift(3);
+			display: block;
 			color: $light-gray;
 			font-family: $whitney;
-			line-height: 2;
+			line-height: 1.5;
+			@include media($desktop) {
+				@include span-columns(9 of 12);
+				@include shift(3);
+			}
 		}
 	}
 }
@@ -337,7 +398,8 @@ ul.elsewhere {
 		a {
 			letter-spacing: -0.04rem;
 			font-weight: 400;
-			font-size: $delta !important;
+			font-size: $delta;
+			padding: 0 0 0 1.5rem;
 			&:before {
 				position: absolute;
 				margin-left: -1.5rem;
@@ -352,6 +414,9 @@ ul.elsewhere {
 			}
 			&.onone {
 				@include ext-link(#0069AA);
+			}
+			@include media($tablet) {
+				padding: 0;
 			}
 		}
 		.excerpt {
