--- a/public/css/sass/_grid-settings.scss
+++ b/public/css/sass/_grid-settings.scss
@@ -4,7 +4,7 @@
 $gutter: 1em;
 $grid-columns: 6;
 $max-width: 820px;
-$visual-grid: true;
+// $visual-grid: true;
 $visual-grid-color: orange;
 
 // Define your breakpoints
