--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -81,9 +81,15 @@ $overlap: 0.13rem;
 }
 
 @mixin ext-link($color) {
-	&:before {
-		color: $color;
+	color: $color;
+	@include media($tablet) {
+		color: inherit;
+
+		&:before {
+			color: $color;
+		}
 	}
+
 	&:hover {
 		color: $color;
 	}
@@ -101,9 +107,13 @@ html {
 body {
 	background: $light;
 	color: $gray;
+	text-align: center;
 	font-family: $whitney;
 	line-height: 1.5;
 	-webkit-font-smoothing: subpixel-antialiased;
+	@include media($tablet) {
+		text-align: left;
+	}
 }
 
 h1 {
@@ -186,7 +196,7 @@ hr {
 
 header {
 	position: relative;
-	padding: 1rem 0 2rem 0;
+	padding: 2rem 0 3rem 0;
 	@include media($tablet) {
 		padding: 3rem 0 4rem 0;
 	}
@@ -274,7 +284,7 @@ footer {
 		margin: 0 0 1rem 0;
 		letter-spacing: -0.05rem;
 		font-weight: 300;
-		font-size: $delta;
+		font-size: $gamma;
 		font-family: $sentinel;
 		line-height: 1.45;
 		@include media($tablet) {
@@ -284,7 +294,7 @@ footer {
 			margin: 0;
 			color: $lighter-gray;
 			letter-spacing: 0;
-			font-size: $default;
+			font-size: $delta;
 			font-family: $whitney;
 			@include media($tablet) {
 				font-size: $delta;
@@ -341,16 +351,12 @@ ul.articles {
 	}
 	li {
 		@include transition(all 0.2s ease);
-		@include media($desktop) {
-			padding: 2rem 0;
-		}
 		display: block;
 		overflow: auto;
 		margin: 0;
-		padding: 1rem 0;
+		padding: 2rem 0;
 		border-bottom: 1px solid $lighter-gray;
 		list-style: none;
-
 		&:first-of-type {
 			border-top: 1px solid $lighter-gray;
 		}
@@ -358,6 +364,9 @@ ul.articles {
 			display: block;
 			color: $light-gray;
 			font-size: $epsilon;
+			@include media($tablet) {
+				line-height: 2.5;
+			}
 			@include media($desktop) {
 				@include span-columns(3 of 12);
 			}
@@ -369,7 +378,6 @@ ul.articles {
 			font-weight: bold;
 			font-weight: 600;
 			font-size: $gamma;
-			line-height: 1;
 			@include media($desktop) {
 				@include span-columns(9 of 12);
 				@include omega;
@@ -399,15 +407,17 @@ ul.elsewhere {
 			letter-spacing: -0.04rem;
 			font-weight: 400;
 			font-size: $delta;
-			padding: 0 0 0 1.5rem;
-			&:before {
-				position: absolute;
-				margin-left: -1.5rem;
-				color: $light-gray;
-				content: "\e000";
-				font-size: $default;
-				font-family: icomoon;
-				line-height: 1.25;
+			@include media($tablet) {
+				padding: 0 0 0 1.5rem;
+				&:before {
+					position: absolute;
+					margin-left: -1.5rem;
+					color: $light-gray;
+					content: "\e000";
+					font-size: $default;
+					font-family: icomoon;
+					line-height: 2;
+				}
 			}
 			&.hm {
 				@include ext-link(#FF3301);
