adjusted intro text

--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -1,6 +1,6 @@
 %head
 	%meta(charset="UTF-8")
-	%meta(type="description" content="")
+	%meta(type="description" content="Brad Cerasani is a front-end designer/developer based in Winnipeg, Canada.")
 	%meta{name: "viewport", content: "width=device-width, initial-scale=1.0, maximum-scale=1.0"}
 
 	%title<
@@ -9,5 +9,4 @@
 	%link(rel="author" href="https://plus.google.com/111628796954215170971‎")
 	%link(rel='icon' type='image/favicon' href='/favicon.ico')
 	%link(rel="stylesheet" type="text/css" href="//cloud.typography.com/7985652/791662/css/fonts.css")
-	/ %link(rel="stylesheet" type="text/css" href="//cloud.typography.com/7985652/793482/css/fonts.css")
 	%link(rel="stylesheet" type="text/css" href="/css/styles.css")
