--- a/views/index.haml
+++ b/views/index.haml
@@ -42,5 +42,11 @@
 							onOne Software
 						%span.excerpt
 							DSLR Camera Remote in Las Vegas
-	= haml :"/layouts/_footer"
+	%footer
+		%div.container
+			%div.left
+				%a.inherit(href="mailto:hello@bradcerasani.me" target="_blank")
+					hello@bradcerasani.me
+			%div.right
+				%span.flag
 	= haml :"/layouts/_scripts"
