--- a/public/css/sass/styles.scss
+++ b/public/css/sass/styles.scss
@@ -75,7 +75,7 @@ $overlap: 0.13rem;
 		box-shadow: 0 0 0 2px adjust-color($color, $lightness: 10%, $saturation: 50%),
 								inset 0 0 0 ($icon-pad/2 + $overlap) $dark-gray;
 	}
-	@include breakpoint($desktop) {
+	@include media($desktop) {
 		margin: 0 auto;
 	}
 }
@@ -110,7 +110,6 @@ html {
 body {
 	background: $light;
 	color: $gray;
-	// text-align: center;
 	font-family: $whitney;
 	line-height: 1.5;
 	-webkit-font-smoothing: subpixel-antialiased;
@@ -161,7 +160,15 @@ p {
 }
 
 em {
-	font-weight: 500;
+	color: $light-gray;
+	font-weight: 400;
+	font-style: italic;
+}
+
+strong {
+	color: $light-gray;
+	letter-spacing: -0.05rem;
+	font-weight: 600;
 	font-style: italic;
 }
 
@@ -169,11 +176,11 @@ blockquote {
 	display: block;
 	margin: 1rem 0 1rem -1rem;
 	padding: 0 0 0 1rem;
-	box-shadow: inset 1px 0 0 $accent;
+	box-shadow: inset 0.2rem 0 0 $accent;
 	font-weight: 400;
 	font-style: italic;
 	p {
-		color: $gray;
+		color: $light-gray;
 	}
 }
 
@@ -186,8 +193,11 @@ a {
 	}
 }
 
-img {
-	max-width: 100%;
+ul {
+	margin: 0 0 1.5 rem 0;
+	padding: 0;
+	list-style: none;
+	display: block;
 }
 
 hr {
@@ -195,6 +205,10 @@ hr {
 	height: 1px;
 	border: none;
 	background: $light-gray;
+}
+
+img {
+	max-width: 100%;
 }
 
 header {
@@ -410,7 +424,7 @@ ul.elsewhere {
 	margin-bottom: 0;
 	li {
 		a {
-			letter-spacing: -0.05rem;
+			letter-spacing: -0.06 rem;
 			font-weight: 400;
 			font-size: $delta;
 			@include media($desktop) {
@@ -419,7 +433,7 @@ ul.elsewhere {
 					position: absolute;
 					margin-left: -1.5rem;
 					color: $light-gray;
-					content: "\e000";
+					content: "\e601";
 					font-size: $default;
 					font-family: icomoon;
 					line-height: 2;
@@ -440,6 +454,18 @@ ul.elsewhere {
 			font-style: italic;
 		}
 	}
+}
+
+.twitter-footer {
+	position: relative;
+	color: $twitter;
+	padding: 0 0 0 1rem;
+	&:before {
+		position: absolute;
+		left: 0;
+		content: "\e606";
+		font-family: icomoon;
+		}
 }
 
 .flag {
@@ -479,4 +505,45 @@ ul.elsewhere {
 ::-moz-selection {
 	background: rgba($accent, 0.8);
 	color: $light;
+}
+
+/* ------------------------ *\
+	Theme
+\* ------------------------ */
+
+// I will find a better place for this soon.
+
+a.demo {
+	position: relative;
+	display: inline-block;
+	padding: 0.75rem 3rem;
+	border: 2px solid $accent;
+	border-radius: 3px;
+	background: $accent;
+	color: white;
+	font-weight: 500;
+	line-height: 1;
+	&.step-two {
+		&:after {
+			position: absolute;
+			right: 1rem;
+			width: 1rem;
+			height: 1rem;
+			content: "\e602";
+			font-family: icomoon;
+		}
+	}
+	&.step-three {
+		&:after {
+			color: $accent;
+		}
+		&:visited {
+			border-color: $light-gray;
+			color: $light-gray;
+			background: $light;
+			&:after {
+				color: #49b749;
+			}
+		}
+	}
 }
