--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer
 	%div.container
 		%div.left
-			%a.inherit(href="mailto:hello@bradcerasani.me" target="_blank")
-				hello@bradcerasani.me
+			%a.twitter-footer(href="http://twitter.com/shedbot" target="_blank")
+				shedbot
 		%div.right
 			%span.flag
