--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer
 	%div.container
 		%div.left
-			%a.twitter-footer(href="http://twitter.com/shedbot" target="_blank")
+			%a.twitter-footer(href="http://twitter.com/shedbot")
 				shedbot
 		%div.right
-			%span.flag
+			%a.flag(href="http://youtu.be/UWrqmrBJtOo")
