--- a/public/css/sass/_icons.scss
+++ b/public/css/sass/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon/icomoon.eot');
-	src:url('../fonts/icomoon/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/icomoon/icomoon.ttf') format('truetype'),
-		url('../fonts/icomoon/icomoon.woff') format('woff'),
-		url('../fonts/icomoon/icomoon.svg#icomoon') format('svg');
+	src:url('../fonts/icomoon/icomoon.eot?3uc573');
+	src:url('../fonts/icomoon/icomoon.eot?#iefix3uc573') format('embedded-opentype'),
+		url('../fonts/icomoon/icomoon.ttf?3uc573') format('truetype'),
+		url('../fonts/icomoon/icomoon.woff?3uc573') format('woff'),
+		url('../fonts/icomoon/icomoon.svg?3uc573#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -23,9 +23,6 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-checkmark:before {
-	content: "\e600";
-}
 .icon-link:before {
 	content: "\e601";
 }
@@ -35,12 +32,18 @@
 .icon-mail:before {
 	content: "\e603";
 }
+.icon-twitter:before {
+	content: "\e606";
+}
 .icon-heart:before {
 	content: "\e604";
+}
+.icon-house:before {
+	content: "\e600";
 }
 .icon-heart2:before {
 	content: "\e605";
 }
-.icon-twitter:before {
-	content: "\e606";
+.icon-home:before {
+	content: "\e607";
 }
