--- a/views/index.haml
+++ b/views/index.haml
@@ -48,5 +48,5 @@
 				%a.inherit(href="mailto:hello@bradcerasani.me" target="_blank")
 					hello@bradcerasani.me
 			%div.right
-				%span.flag
+				%a.flag(href="http://youtu.be/UWrqmrBJtOo")
 	= haml :"/layouts/_scripts"
