--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html
 	= haml :"/layouts/_head"
 	%body
-		%div.container
-			= yield
+		= haml :"/layouts/_header"
+		= yield
 		= haml :"/layouts/_footer"
 		= haml :"/layouts/_scripts"
