swap flag URL for click tracking

--- a/views/index.haml
+++ b/views/index.haml
@@ -48,5 +48,5 @@
 				%a.inherit(href="mailto:hello@bradcerasani.me" target="_blank")
 					hello@bradcerasani.me
 			%div.right
-				%a.flag(href="http://youtu.be/UWrqmrBJtOo")
+				%a.flag(href="http://bit.ly/19XJQ1c")
 	= haml :"/layouts/_scripts"
