--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -4,4 +4,4 @@
 			%a.twitter-footer(href="http://twitter.com/shedbot")
 				shedbot
 		%div.right
-			%a.flag(href="http://youtu.be/UWrqmrBJtOo")
+			%a.flag(href="http://bit.ly/19XJQ1c")
