updated contact link

--- a/views/index.haml
+++ b/views/index.haml
@@ -45,7 +45,7 @@
 	%footer
 		%div.container
 			%div.left
-				%a.inherit(href="mailto:hello@bradcerasani.me" target="_blank")
+				%a.inherit(href="mailto:hello@bradcerasani.me?subject=Hi!" target="_blank")
 					hello@bradcerasani.me
 			%div.right
 				%a.flag(href="http://bit.ly/19XJQ1c")
