--- a/views/index.haml
+++ b/views/index.haml
@@ -15,11 +15,11 @@
 					%li
 						%a(href="http://instagram.com/bradcerasani" class="instagram")
 					%li
-						%a(href="http://rdio.com/people/bcerasani" class="rdio")
+						%a(href="http://rdio.com/people/bradcerasani" class="rdio")
 					%li
-						%a(href="http://github.com/bcerasani" class="github")
+						%a(href="http://github.com/bradcerasani" class="github")
 					%li
-						%a(href="http://dribbble.com/bcerasani" class="dribbble")
+						%a(href="http://dribbble.com/bradcerasani" class="dribbble")
 					%li
 						%a(href="http://ca.linkedin.com/in/bradcerasani" class="linkedin")
 		%section
