updated Twitter handle

--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,7 +1,7 @@
 %footer
 	%div.container
 		%div.left
-			%a.twitter-footer(href="http://twitter.com/shedbot")
+			%a.twitter-footer(href="http://twitter.com/bradcerasani")
 				shedbot
 		%div.right
 			%span.flag(href="http://bit.ly/19XJQ1c")
