--- a/views/index.haml
+++ b/views/index.haml
@@ -11,7 +11,7 @@
 					%p.small In other circles I may also be known as a musician, audio engineer, commercial photographer, and/or hockey coach.
 				%ul.social
 					%li
-						%a(href="http://twitter.com/shedbot" class="twitter")
+						%a(href="http://twitter.com/bradcerasani" class="twitter")
 					%li
 						%a(href="http://instagram.com/bradcerasani" class="instagram")
 					%li
