--- a/views/index.haml
+++ b/views/index.haml
@@ -31,7 +31,7 @@
 					%li
 						%span.date
 							7 May, 2013
-						%a(href="http://www.hermanmiller.com/lifework/the-innovative-studio-of-web-designer-developer-brad-cerasani/" class="hm")
+						%a(href="http://www.apartmenttherapy.com/brads-audio-playground-home-office-lifework-189052" class="hm")
 							Herman Miller Lifework
 						%span.excerpt
 							The Innovative Studio of Web Designer & Developer Brad Cerasani
