--- a/views/index.haml
+++ b/views/index.haml
@@ -48,5 +48,5 @@
 				%a.inherit(href="mailto:hello@bradcerasani.me?subject=Hi!" target="_blank")
 					hello@bradcerasani.me
 			%div.right
-				%a.flag(href="http://bit.ly/19XJQ1c")
+				%a.flag(href="https://www.youtube.com/watch?v=pFCd4ZOTVg4")
 	= haml :"/layouts/_scripts"
