--- a/src/assets/styles/components/index.css
+++ b/src/assets/styles/components/index.css
@@ -3,3 +3,4 @@
   =========================================================================== */
 
 @import "components.button";
+@import "components.logo";
