--- a/static/css/prism-theme.css
+++ b/static/css/prism-theme.css
@@ -1,44 +1,44 @@
 code[class*='language-'],
 pre[class*='language-'] {
-  color: hsl(245, 28%, 17%);
+  -moz-hyphens: none;
+  -moz-tab-size: 4;
+  -ms-hyphens: none;
+  -o-tab-size: 4;
+  -webkit-hyphens: none;
   background: none;
-  font-family: 'Vulf Mono Demo', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
+  color: hsl(245, 28%, 17%);
+  font-family: Consolas, Menlo, Monaco, source-code-pro, 'Courier New',
     monospace;
   font-size: 14px;
+  hyphens: none;
+  line-height: 1.5;
+  tab-size: 4;
   text-align: left;
   white-space: pre;
-  word-spacing: normal;
   word-break: normal;
+  word-spacing: normal;
   word-wrap: normal;
-  line-height: 1.5;
-
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
 }
 
 /* Code blocks */
 pre[class*='language-'] {
   background-color: hsl(0, 0%, 96%);
+  border-radius: 4px;
   margin-bottom: 2rem;
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
   overflow: auto;
   padding: 1.5rem;
-  border-radius: 4px;
 }
 
 /* Inline code */
 :not(pre) > code[class*='language-'] {
-  font-size: inherit;
-  white-space: normal;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: hsl(300, 2%, 30%);
   background-color: hsl(0, 0%, 94%);
+  color: black;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  white-space: normal;
 }
 
 .token.comment,
@@ -69,17 +69,12 @@ pre[class*='language-'] {
   color: hsl(11, 63%, 52%);
 }
 
-.token.attr-name {
-  font-style: italic;
-}
-
 .token.attr-name,
 .token.property,
 .token.class-name,
 .token.constant,
 .token.symbol {
-  color: hsl(206, 13%, 51%);
-  font-style: italic;
+  color: hsl(206, 53%, 51%);
 }
 
 .token.alternation,
