--- a/static/css/prism-theme.css
+++ b/static/css/prism-theme.css
@@ -36,13 +36,21 @@ pre[class*='language-'] {
 /* Code blocks */
 pre[class*='language-'] {
   background-color: var(--codeBackgroundColor);
-  border-radius: 8px;
+  border-radius: 0.5rem;
   color: var(--color);
   margin-bottom: 2rem;
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
+  margin-left: -15px;
+  margin-right: -15px;
   overflow: auto;
-  padding: 1.5rem;
+  padding: 0.75rem 15px;
+}
+
+@media (min-width: 768px) {
+  pre[class*='language-'] {
+    padding: 1.5rem;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
 }
 
 pre *::selection {
