--- a/static/css/prism-theme.css
+++ b/static/css/prism-theme.css
@@ -39,10 +39,8 @@ pre[class*='language-'] {
   border-radius: 0.5rem;
   color: var(--color);
   margin-bottom: 2rem;
-  margin-left: -15px;
-  margin-right: -15px;
   overflow: auto;
-  padding: 0.75rem 15px;
+  padding: 0.625rem 0.75rem;
 }
 
 @media (min-width: 768px) {
