--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'USW';
   font-style: italic;
   font-weight: 400;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'USW';
   font-weight: 400;
   src: url('/fonts/USW-Regular.woff2') format('woff2'),
@@ -16,7 +16,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'USW';
   font-style: italic;
   font-weight: 500;
@@ -25,7 +25,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'USW';
   font-weight: 500;
   src: url('/fonts/USW-Medium.woff2') format('woff2'),
@@ -33,7 +33,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'CNW';
   font-weight: 400;
   src: url('/fonts/CNW-Regular.woff2') format('woff2'),
@@ -41,7 +41,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'CNW';
   font-weight: 500;
   src: url('/fonts/CNW-Medium.woff2') format('woff2'),
@@ -49,7 +49,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'CNW';
   font-weight: 700;
   src: url('/fonts/CNW-Bold.woff2') format('woff2'),
@@ -57,7 +57,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'JBM';
   font-weight: 400;
   src: url('/fonts/JBM-Regular.woff2') format('woff2'),
@@ -65,7 +65,7 @@
 }
 
 @font-face {
-  font-display: fallback;
+  font-display: block;
   font-family: 'JBM';
   font-style: italic;
   font-weight: 400;
