--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -6,7 +6,8 @@ body {
 }
 
 @media (min-width: 768px) {
-  html, body {
+  html,
+  body {
     font-size: 20px;
   }
 }
@@ -90,18 +91,13 @@ h2 {
 }
 
 h3 {
+  font-family: var(--fontFamilySerif);
   font-size: 1.5rem;
-  font-weight: 400;
-  letter-spacing: -0.025em;
+  font-weight: 500;
   line-height: 1.25;
   margin-bottom: 0.5rem;
   margin-top: 0;
-}
-
-@media (min-width: 480px) {
-  h3 {
-    font-size: 2.2rem;
-  }
+  padding-top: 0.5rem;
 }
 
 h4 {
