--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -30,6 +30,25 @@ body {
   min-height: 100vh;
 }
 
+body::after {
+  animation-duration: 8s;
+  animation-iteration-count: infinite;
+  animation-name: grain;
+  animation-timing-function: steps(10);
+  background-image: url('/images/textures/noise.png');
+  background-repeat: repeat;
+  content: '';
+  display: block;
+  height: 300vh;
+  left: -100vw;
+  opacity: 0.3;
+  pointer-events: none;
+  position: fixed;
+  top: -100vh;
+  width: 300vw;
+  z-index: -1;
+}
+
 @media (min-width: 480px) {
   body::before {
     background-color: currentColor;
